# disaster_resilient_system

./: README.md
data crawling & IBM natural language understanding/: Tacoma.txt  script.py
path_planning_algorithm/navigator/: CMakeLists.txt  package.xml  resize.py
path_planning_algorithm/navigator/launch/: main.launch
path_planning_algorithm/navigator/src/: main.cpp  planner.cpp
